--- a/tcc/capitulos/introducao.tex
+++ b/tcc/capitulos/introducao.tex
@@ -69,10 +69,13 @@ O presente trabalho está estruturado da seguinte forma: no Capítulo
 \ref{cap:Processamento} será apresentado uma introdução ao Processamento de
 Linguagem Natural, assim como uma introdução a métodos estatísticos e
 simbólicos a fim de demonstrar a diferença entre ambos.
+
 No Capítulo \ref{cap:Classificadores} será apresentada uma descrição da análise
 de sentimentos, e métodos estatísticos e simbólicos aplicados nessa análise a fim de se determinar o
-método de análise de sentimentos a ser utilizado. Por fim, o Capítulo apresenta
-a forma de implementação do método selecionado. O Capítulo \ref{cap:Reddit} tem
+método de análise de sentimentos a ser utilizado. Por fim, este apresenta
+a forma de implementação do método selecionado. 
+
+O Capítulo \ref{cap:banco} tem
 o objetivo de descrever a forma que foi criado e populado o banco de dados para a análise de sentimentos, descrevendo a rede social em questão, os tópicos
 selecionados para a criação da base e a implementação para extração dos
 comentários para criação da base.
