--- a/tcc/tcc.bib
+++ b/tcc/tcc.bib
@@ -157,6 +157,7 @@ extraction and categorization",
 }
 
 
+
 @misc{OAuth2,
   author    = "{OAuth2}",
   title     = "OAuth2",
@@ -222,6 +223,23 @@ extraction and categorization",
  publisher = {Association for Computational Linguistics},
  address = {Stroudsburg, PA, USA},
 } 
+
+@inproceedings{Loper:2002:NNL:1118108.1118117,
+ author = {Loper, Edward and Bird, Steven},
+ title = {NLTK: The Natural Language Toolkit},
+ booktitle = {Proceedings of the ACL-02 Workshop on Effective Tools and Methodologies for Teaching Natural Language Processing and Computational Linguistics - Volume 1},
+ series = {ETMTNLP '02},
+ year = {2002},
+ location = {Philadelphia, Pennsylvania},
+ pages = {63--70},
+ numpages = {8},
+ url = {http://dx.doi.org/10.3115/1118108.1118117},
+ doi = {10.3115/1118108.1118117},
+ acmid = {1118117},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+
 @book{Manning:2008:IIR:1394399,
  author = {Manning, Christopher D. and Raghavan, Prabhakar and Sch\"{u}tze, Hinrich},
  title = {Introduction to Information Retrieval},
