--- a/tcc/tcc.tex
+++ b/tcc/tcc.tex
@@ -86,13 +86,14 @@ Orientador: {André Luis Martinotto\par}
 
 Banca examinadora:\par
 \hspace{1cm} {\setlength{\unitlength}{1cm}
-\makebox(9,1){\parbox[c]{9cm}{\center André Gustavo Adami\\ CCTI/UCS}}}\par
+\makebox(9,1){\parbox[c]{9cm}{\center Daniel Luis Notari\\ CCTI/UCS}}}\par
 \hspace{1cm} {\setlength{\unitlength}{1cm}
-\makebox(9,1){\parbox[c]{9cm}{\center Carlos Eduardo Nery\\ CCTI/UCS}}}\par
+\makebox(9,1){\parbox[c]{9cm}{\center Helena Graziottin Ribeiro\\ CCTI/UCS}}}\par
 
 \vfill
 
-\hfill{\setlength{\unitlength}{1cm}\makebox(9,2.5){\parbox[c]{9cm}{\setlength{\parskip}{0.8cm}\center\vskip -1.2cm Projeto de Diplomação apresentado em\\ 5 de Dezembro de 2013\par Daniel Luís Notari\\ Coordenador}}}
+%\hfill{\setlength{\unitlength}{1cm}\makebox(9,2.5){\parbox[c]{9cm}{\setlength{\parskip}{0.8cm}\center\vskip
+% -1.2cm Projeto de Diplomação apresentado em\\ 5 de Dezembro de 2013\par Daniel Luís Notari\\ Coordenador}}}
 
 \end{singlespace}
 
@@ -116,13 +117,28 @@ Banca examinadora:\par
 \listoffigures
 \listoftables
 
-\keyword{Kinect}
-\keyword{Blender}
-\keyword{Animação 3D}
+\keyword{Reddit}
+\keyword{Processamento de Linguagem Natural}
+\keyword{Análise de Sentimentos}
 
 \begin{abstract}
 
-%TODO Inserir Abstract
+Nos tempos atuais, a sociedade tem cada vez mais se expressado através de Redes
+Sociais, dentre várias redes sociais, se destaca o Reddit, no qual além de ser
+uma das maiores redes sociais no mundo, é uma rede social de \textit{links},
+aonde usuários postam e comentam sobre estes gerando um grande volume de dados que muitas vezes se dão por
+ignorados.
+
+A identificação de padrões de sentimentos expressos por grupos dessa comunidade, se faz útil visto que a partir dessa avaliação é possível construir ferramentas que apoiam decisões tanto de um ponto de vista político, como por
+exemplo, entender qual é a opinião sobre um determinado assunto de um conjunto
+de eleitores, tanto quanto um ponto de vista de negócios, para entender qual a
+opinião dos consumidores de um produto, ou de seu competidor, a respeito de um
+determinado assunto.
+
+Neste volume serão apresentados estudos sobre o Processamento de Linguagem
+Natural e Análise de Sentimentos, os quais apresenta o objetivo da criação de um
+\textit{software} no qual seja possível efetuar a análise de sentimentos na rede
+social Reddit.
 
 \end{abstract}
 
