--- a/tcc/tcc.tex
+++ b/tcc/tcc.tex
@@ -23,6 +23,10 @@
 \usepackage{amsmath}
 \usepackage{booktabs}
 \usepackage{textcomp}
+\usepackage{array}
+\usepackage{booktabs}
+\usepackage{xcolor}
+\usepackage{colortbl}
 %\usepackage[brazilian]{babel}
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 \onehalfspacing
